minor scripting changes to file names

--- a/openocd/mm1-hat.cfg
+++ b/openocd/mm1-hat.cfg
@@ -35,6 +35,6 @@ reset halt
 #at91samd bootloader 0x2000
 
 
-#program seesaw.bin verify
-#program circuitpython.bin verify 0x2000
+#program seesaw-mm1-hat.bin verify 0x2000
+#program circuitpython-mm1-hat.bin verify 0x2000
 
