we are having issues

--- a/openocd-c/openocd.cfg
+++ b/openocd-c/openocd.cfg
@@ -15,7 +15,7 @@ init
 targets
 reset halt
 at91samd bootloader 0
-#program firmware/seesaw-donkeyHatlite.bin verify
+#program firmware/cpy-mm1-real.bin verify
 program firmware/samd21_sam_ba.bin verify
 at91samd bootloader 8192
 reset
